[tool.poetry]
name = "pvz_game"
version = "0.1.0"
description = "A Plants vs. Zombies–style game built with Python and Pygame for learning purposes."
authors = ["Jimmy <15828061015@163.com>"]

packages = [
    { include = "pvz_game", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12"
pygame = "^2.1.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
